jamMigrationZips/garage/test/deploy/k8s/deployment.yaml
# Generated by IBM TransformationAdvisor
# Tue Apr 02 14:20:58 UTC 2024
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: garagesale
  name: garagesale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: garagesale
  template:
    metadata:
      labels:
        app: garagesale
    spec:
      containers:
        - image: IMAGE_REFERENCE
          imagePullPolicy: Always
          name: garagesale
          ports:
            - containerPort: 9080
              protocol: TCP
