jamMigrationZips/garage/test/deploy/k8s/route.yaml
# Generated by IBM TransformationAdvisor
# Tue Apr 02 14:20:58 UTC 2024
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: garagesale
  name: garagesale
spec:
  path:
    /
  port:
    targetPort: http
  to:
    kind: Service
    name: garagesale
    weight: 100
