jamMigrationZips/garage/test/deploy/k8s/service.yaml
# Generated by IBM TransformationAdvisor
# Tue Apr 02 14:20:58 UTC 2024
apiVersion: v1
kind: Service
metadata:
  labels:
    app: garagesale
  name: garagesale
spec:
  type: NodePort
  ports:
    - name: http
      port: 9080
      targetPort: 9080
  selector:
    app: garagesale
